--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "node-red"
   ],
   "author": "Teemill Tech Ltd.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Teemill/node-red-custom-product.git"
+  },
   "license": "ISC",
   "node-red" : {
     "version": ">=1.0.0",
